@@ -14,6 +14,7 @@ aTunes 2.2.0
 - Filter text field separated for play list and navigator
 - Improved filters to retrieve albums from last.fm (mbid, artist match) Removed filters as preferences
 - Optimizations retrieving list of covers of albums in artist panel
+- Removed status bar text showing current element being played
 
 aTunes 2.1.1
 ------------
